@@ -7,6 +7,9 @@ v0.2.1 ()
 	* defined() function works for resource references.
 	* in operator implemented for hashes.
 	* Multithreading works.
+	* The ruby <> daemon communication is now over ByteStrings.
+	* The toRuby function has been optimized, doubling the overall speed for
+	rendering complex catalogs.
 
 v0.2.0 (2012/10/08)
   New features
